@@ -1,5 +1,8 @@
 2012-02-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_OS/src/Bottle.cpp: add Bottle::read(PortWriter)
+	helper function [thanks Miguel Sarabia Del Castillo]
+
 	* src/libYARP_OS/src/Value.cpp: fix wire format of
 	Value objects [thanks Miguel Sarabia Del Castillo]
 
